parser.output
Terminals unused in grammar

   TDOUBLE
   TCEQ
   TCNE
   TCLE
   TCGT
   TCGE
   TDIV


State 90 conflicts: 7 shift/reduce
State 110 conflicts: 7 shift/reduce
State 114 conflicts: 4 shift/reduce
State 115 conflicts: 4 shift/reduce
State 116 conflicts: 4 shift/reduce
State 117 conflicts: 7 shift/reduce


Grammar

    0 $accept: program $end

    1 program: mainclassdecl classdecllist

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    3 classdecl: TCLASS ident TEXTENDS ident TLBRACE vardecllist mtddecllist TRBRACE
    4          | TCLASS ident TEXTENDS ident TLBRACE vardecllist TRBRACE
    5          | TCLASS ident TLBRACE vardecllist mtddecllist TRBRACE
    6          | TCLASS ident TLBRACE vardecllist TRBRACE

    7 vardecl: type ident TSEMICOLON

    8 vararg: type ident

    9 mtddecl: TPUBLIC type ident TLPAREN vararglist TRPAREN TLBRACE stmtlist TRETURN expr TSEMICOLON TRBRACE

   10 type: TINT TLF TRF
   11     | TINT
   12     | TBOOL
   13     | ident

   14 stmt: TLBRACE stmtlist TRBRACE
   15     | TIF TLPAREN expr TRPAREN stmt TELSE stmt
   16     | TWHILE TLPAREN expr TRPAREN stmt
   17     | TSYSOUT TLPAREN expr TRPAREN TSEMICOLON
   18     | ident TEQUAL expr TSEMICOLON
   19     | ident TLF expr TRF TEQUAL expr TSEMICOLON
   20     | type ident TSEMICOLON

   21 expr: biopexpr
   22     | expr TLF expr TRF
   23     | expr TDOT TLENGT
   24     | expr TDOT ident TLPAREN exprlist TRPAREN
   25     | TNUMBER
   26     | TTRUE
   27     | TFALSE
   28     | ident
   29     | TTHIS
   30     | TNEW TINT TLF expr TRF
   31     | TNEW ident TLPAREN TRPAREN
   32     | TBANG expr
   33     | TLPAREN expr TRPAREN

   34 biopexpr: expr TPLUS expr
   35         | expr TMINUS expr
   36         | expr TCLT expr
   37         | expr TAND expr
   38         | expr TMUL expr

   39 stmtlist: %empty
   40         | stmtlist stmt

   41 mtddecllist: mtddecllist mtddecl
   42            | mtddecl

   43 classdecllist: %empty
   44              | classdecllist classdecl

   45 exprlist: %empty
   46         | expr
   47         | exprlist TCOMMA expr

   48 vardecllist: %empty
   49            | vardecllist vardecl

   50 vararglist: %empty
   51           | vararg
   52           | vararg TCOMMA vararglist

   53 ident: TIDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
TIDENT (258) 53
TINT (259) 10 11 30
TDOUBLE (260)
TNUMBER (261) 25
TCEQ (262)
TCNE (263)
TCLT (264) 36
TCLE (265)
TCGT (266)
TCGE (267)
TEQUAL (268) 18 19
TLPAREN (269) 2 9 15 16 17 24 31 33
TRPAREN (270) 2 9 15 16 17 24 31 33
TLBRACE (271) 2 3 4 5 6 9 14
TRBRACE (272) 2 3 4 5 6 9 14
TCOMMA (273) 47 52
TDOT (274) 23 24
TSEMICOLON (275) 7 9 17 18 19 20
TSYSOUT (276) 17
TPLUS (277) 34
TMINUS (278) 35
TMUL (279) 38
TDIV (280)
TAND (281) 37
TLF (282) 2 10 19 22 30
TRF (283) 2 10 19 22 30
TCLASS (284) 2 3 4 5 6
TVOID (285) 2
TPUBLIC (286) 2 9
TSTATIC (287) 2
TMAIN (288) 2
TSTRING (289) 2
TEXTENDS (290) 3 4
TRETURN (291) 9
TFALSE (292) 27
TTRUE (293) 26
TBOOL (294) 12
TBANG (295) 32
TELSE (296) 15
TIF (297) 15
TLENGT (298) 23
TNEW (299) 30 31
TTHIS (300) 29
TWHILE (301) 16


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
mainclassdecl (49)
    on left: 2, on right: 1
classdecl (50)
    on left: 3 4 5 6, on right: 44
vardecl (51)
    on left: 7, on right: 49
vararg (52)
    on left: 8, on right: 51 52
mtddecl (53)
    on left: 9, on right: 41 42
type (54)
    on left: 10 11 12 13, on right: 7 8 9 20
stmt (55)
    on left: 14 15 16 17 18 19 20, on right: 15 16 40
expr (56)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33, on right: 9 15
    16 17 18 19 22 23 24 30 32 33 34 35 36 37 38 46 47
biopexpr (57)
    on left: 34 35 36 37 38, on right: 21
stmtlist (58)
    on left: 39 40, on right: 2 9 14 40
mtddecllist (59)
    on left: 41 42, on right: 3 5 41
classdecllist (60)
    on left: 43 44, on right: 1 44
exprlist (61)
    on left: 45 46 47, on right: 24 47
vardecllist (62)
    on left: 48 49, on right: 3 4 5 6 49
vararglist (63)
    on left: 50 51 52, on right: 9 52
ident (64)
    on left: 53, on right: 2 3 4 5 6 7 8 9 13 18 19 20 24 28 31


State 0

    0 $accept: . program $end

    TCLASS  shift, and go to state 1

    program        go to state 2
    mainclassdecl  go to state 3


State 1

    2 mainclassdecl: TCLASS . ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TIDENT  shift, and go to state 4

    ident  go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: mainclassdecl . classdecllist

    $default  reduce using rule 43 (classdecllist)

    classdecllist  go to state 7


State 4

   53 ident: TIDENT .

    $default  reduce using rule 53 (ident)


State 5

    2 mainclassdecl: TCLASS ident . TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TLBRACE  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    1 program: mainclassdecl classdecllist .
   44 classdecllist: classdecllist . classdecl

    TCLASS  shift, and go to state 9

    $default  reduce using rule 1 (program)

    classdecl  go to state 10


State 8

    2 mainclassdecl: TCLASS ident TLBRACE . TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TPUBLIC  shift, and go to state 11


State 9

    3 classdecl: TCLASS . ident TEXTENDS ident TLBRACE vardecllist mtddecllist TRBRACE
    4          | TCLASS . ident TEXTENDS ident TLBRACE vardecllist TRBRACE
    5          | TCLASS . ident TLBRACE vardecllist mtddecllist TRBRACE
    6          | TCLASS . ident TLBRACE vardecllist TRBRACE

    TIDENT  shift, and go to state 4

    ident  go to state 12


State 10

   44 classdecllist: classdecllist classdecl .

    $default  reduce using rule 44 (classdecllist)


State 11

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC . TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TSTATIC  shift, and go to state 13


State 12

    3 classdecl: TCLASS ident . TEXTENDS ident TLBRACE vardecllist mtddecllist TRBRACE
    4          | TCLASS ident . TEXTENDS ident TLBRACE vardecllist TRBRACE
    5          | TCLASS ident . TLBRACE vardecllist mtddecllist TRBRACE
    6          | TCLASS ident . TLBRACE vardecllist TRBRACE

    TLBRACE   shift, and go to state 14
    TEXTENDS  shift, and go to state 15


State 13

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC . TVOID TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TVOID  shift, and go to state 16


State 14

    5 classdecl: TCLASS ident TLBRACE . vardecllist mtddecllist TRBRACE
    6          | TCLASS ident TLBRACE . vardecllist TRBRACE

    $default  reduce using rule 48 (vardecllist)

    vardecllist  go to state 17


State 15

    3 classdecl: TCLASS ident TEXTENDS . ident TLBRACE vardecllist mtddecllist TRBRACE
    4          | TCLASS ident TEXTENDS . ident TLBRACE vardecllist TRBRACE

    TIDENT  shift, and go to state 4

    ident  go to state 18


State 16

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID . TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TMAIN  shift, and go to state 19


State 17

    5 classdecl: TCLASS ident TLBRACE vardecllist . mtddecllist TRBRACE
    6          | TCLASS ident TLBRACE vardecllist . TRBRACE
   49 vardecllist: vardecllist . vardecl

    TIDENT   shift, and go to state 4
    TINT     shift, and go to state 20
    TRBRACE  shift, and go to state 21
    TPUBLIC  shift, and go to state 22
    TBOOL    shift, and go to state 23

    vardecl      go to state 24
    mtddecl      go to state 25
    type         go to state 26
    mtddecllist  go to state 27
    ident        go to state 28


State 18

    3 classdecl: TCLASS ident TEXTENDS ident . TLBRACE vardecllist mtddecllist TRBRACE
    4          | TCLASS ident TEXTENDS ident . TLBRACE vardecllist TRBRACE

    TLBRACE  shift, and go to state 29


State 19

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN . TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TLPAREN  shift, and go to state 30


State 20

   10 type: TINT . TLF TRF
   11     | TINT .

    TLF  shift, and go to state 31

    $default  reduce using rule 11 (type)


State 21

    6 classdecl: TCLASS ident TLBRACE vardecllist TRBRACE .

    $default  reduce using rule 6 (classdecl)


State 22

    9 mtddecl: TPUBLIC . type ident TLPAREN vararglist TRPAREN TLBRACE stmtlist TRETURN expr TSEMICOLON TRBRACE

    TIDENT  shift, and go to state 4
    TINT    shift, and go to state 20
    TBOOL   shift, and go to state 23

    type   go to state 32
    ident  go to state 28


State 23

   12 type: TBOOL .

    $default  reduce using rule 12 (type)


State 24

   49 vardecllist: vardecllist vardecl .

    $default  reduce using rule 49 (vardecllist)


State 25

   42 mtddecllist: mtddecl .

    $default  reduce using rule 42 (mtddecllist)


State 26

    7 vardecl: type . ident TSEMICOLON

    TIDENT  shift, and go to state 4

    ident  go to state 33


State 27

    5 classdecl: TCLASS ident TLBRACE vardecllist mtddecllist . TRBRACE
   41 mtddecllist: mtddecllist . mtddecl

    TRBRACE  shift, and go to state 34
    TPUBLIC  shift, and go to state 22

    mtddecl  go to state 35


State 28

   13 type: ident .

    $default  reduce using rule 13 (type)


State 29

    3 classdecl: TCLASS ident TEXTENDS ident TLBRACE . vardecllist mtddecllist TRBRACE
    4          | TCLASS ident TEXTENDS ident TLBRACE . vardecllist TRBRACE

    $default  reduce using rule 48 (vardecllist)

    vardecllist  go to state 36


State 30

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN . TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TSTRING  shift, and go to state 37


State 31

   10 type: TINT TLF . TRF

    TRF  shift, and go to state 38


State 32

    9 mtddecl: TPUBLIC type . ident TLPAREN vararglist TRPAREN TLBRACE stmtlist TRETURN expr TSEMICOLON TRBRACE

    TIDENT  shift, and go to state 4

    ident  go to state 39


State 33

    7 vardecl: type ident . TSEMICOLON

    TSEMICOLON  shift, and go to state 40


State 34

    5 classdecl: TCLASS ident TLBRACE vardecllist mtddecllist TRBRACE .

    $default  reduce using rule 5 (classdecl)


State 35

   41 mtddecllist: mtddecllist mtddecl .

    $default  reduce using rule 41 (mtddecllist)


State 36

    3 classdecl: TCLASS ident TEXTENDS ident TLBRACE vardecllist . mtddecllist TRBRACE
    4          | TCLASS ident TEXTENDS ident TLBRACE vardecllist . TRBRACE
   49 vardecllist: vardecllist . vardecl

    TIDENT   shift, and go to state 4
    TINT     shift, and go to state 20
    TRBRACE  shift, and go to state 41
    TPUBLIC  shift, and go to state 22
    TBOOL    shift, and go to state 23

    vardecl      go to state 24
    mtddecl      go to state 25
    type         go to state 26
    mtddecllist  go to state 42
    ident        go to state 28


State 37

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING . TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TLF  shift, and go to state 43


State 38

   10 type: TINT TLF TRF .

    $default  reduce using rule 10 (type)


State 39

    9 mtddecl: TPUBLIC type ident . TLPAREN vararglist TRPAREN TLBRACE stmtlist TRETURN expr TSEMICOLON TRBRACE

    TLPAREN  shift, and go to state 44


State 40

    7 vardecl: type ident TSEMICOLON .

    $default  reduce using rule 7 (vardecl)


State 41

    4 classdecl: TCLASS ident TEXTENDS ident TLBRACE vardecllist TRBRACE .

    $default  reduce using rule 4 (classdecl)


State 42

    3 classdecl: TCLASS ident TEXTENDS ident TLBRACE vardecllist mtddecllist . TRBRACE
   41 mtddecllist: mtddecllist . mtddecl

    TRBRACE  shift, and go to state 45
    TPUBLIC  shift, and go to state 22

    mtddecl  go to state 35


State 43

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF . TRF ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TRF  shift, and go to state 46


State 44

    9 mtddecl: TPUBLIC type ident TLPAREN . vararglist TRPAREN TLBRACE stmtlist TRETURN expr TSEMICOLON TRBRACE

    TIDENT  shift, and go to state 4
    TINT    shift, and go to state 20
    TBOOL   shift, and go to state 23

    $default  reduce using rule 50 (vararglist)

    vararg      go to state 47
    type        go to state 48
    vararglist  go to state 49
    ident       go to state 28


State 45

    3 classdecl: TCLASS ident TEXTENDS ident TLBRACE vardecllist mtddecllist TRBRACE .

    $default  reduce using rule 3 (classdecl)


State 46

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF . ident TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TIDENT  shift, and go to state 4

    ident  go to state 50


State 47

   51 vararglist: vararg .
   52           | vararg . TCOMMA vararglist

    TCOMMA  shift, and go to state 51

    $default  reduce using rule 51 (vararglist)


State 48

    8 vararg: type . ident

    TIDENT  shift, and go to state 4

    ident  go to state 52


State 49

    9 mtddecl: TPUBLIC type ident TLPAREN vararglist . TRPAREN TLBRACE stmtlist TRETURN expr TSEMICOLON TRBRACE

    TRPAREN  shift, and go to state 53


State 50

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF ident . TRPAREN TLBRACE stmtlist TRBRACE TRBRACE

    TRPAREN  shift, and go to state 54


State 51

   52 vararglist: vararg TCOMMA . vararglist

    TIDENT  shift, and go to state 4
    TINT    shift, and go to state 20
    TBOOL   shift, and go to state 23

    $default  reduce using rule 50 (vararglist)

    vararg      go to state 47
    type        go to state 48
    vararglist  go to state 55
    ident       go to state 28


State 52

    8 vararg: type ident .

    $default  reduce using rule 8 (vararg)


State 53

    9 mtddecl: TPUBLIC type ident TLPAREN vararglist TRPAREN . TLBRACE stmtlist TRETURN expr TSEMICOLON TRBRACE

    TLBRACE  shift, and go to state 56


State 54

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN . TLBRACE stmtlist TRBRACE TRBRACE

    TLBRACE  shift, and go to state 57


State 55

   52 vararglist: vararg TCOMMA vararglist .

    $default  reduce using rule 52 (vararglist)


State 56

    9 mtddecl: TPUBLIC type ident TLPAREN vararglist TRPAREN TLBRACE . stmtlist TRETURN expr TSEMICOLON TRBRACE

    $default  reduce using rule 39 (stmtlist)

    stmtlist  go to state 58


State 57

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE . stmtlist TRBRACE TRBRACE

    $default  reduce using rule 39 (stmtlist)

    stmtlist  go to state 59


State 58

    9 mtddecl: TPUBLIC type ident TLPAREN vararglist TRPAREN TLBRACE stmtlist . TRETURN expr TSEMICOLON TRBRACE
   40 stmtlist: stmtlist . stmt

    TIDENT   shift, and go to state 4
    TINT     shift, and go to state 20
    TLBRACE  shift, and go to state 60
    TSYSOUT  shift, and go to state 61
    TRETURN  shift, and go to state 62
    TBOOL    shift, and go to state 23
    TIF      shift, and go to state 63
    TWHILE   shift, and go to state 64

    type   go to state 65
    stmt   go to state 66
    ident  go to state 67


State 59

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist . TRBRACE TRBRACE
   40 stmtlist: stmtlist . stmt

    TIDENT   shift, and go to state 4
    TINT     shift, and go to state 20
    TLBRACE  shift, and go to state 60
    TRBRACE  shift, and go to state 68
    TSYSOUT  shift, and go to state 61
    TBOOL    shift, and go to state 23
    TIF      shift, and go to state 63
    TWHILE   shift, and go to state 64

    type   go to state 65
    stmt   go to state 66
    ident  go to state 67


State 60

   14 stmt: TLBRACE . stmtlist TRBRACE

    $default  reduce using rule 39 (stmtlist)

    stmtlist  go to state 69


State 61

   17 stmt: TSYSOUT . TLPAREN expr TRPAREN TSEMICOLON

    TLPAREN  shift, and go to state 70


State 62

    9 mtddecl: TPUBLIC type ident TLPAREN vararglist TRPAREN TLBRACE stmtlist TRETURN . expr TSEMICOLON TRBRACE

    TIDENT   shift, and go to state 4
    TNUMBER  shift, and go to state 71
    TLPAREN  shift, and go to state 72
    TFALSE   shift, and go to state 73
    TTRUE    shift, and go to state 74
    TBANG    shift, and go to state 75
    TNEW     shift, and go to state 76
    TTHIS    shift, and go to state 77

    expr      go to state 78
    biopexpr  go to state 79
    ident     go to state 80


State 63

   15 stmt: TIF . TLPAREN expr TRPAREN stmt TELSE stmt

    TLPAREN  shift, and go to state 81


State 64

   16 stmt: TWHILE . TLPAREN expr TRPAREN stmt

    TLPAREN  shift, and go to state 82


State 65

   20 stmt: type . ident TSEMICOLON

    TIDENT  shift, and go to state 4

    ident  go to state 83


State 66

   40 stmtlist: stmtlist stmt .

    $default  reduce using rule 40 (stmtlist)


State 67

   13 type: ident .
   18 stmt: ident . TEQUAL expr TSEMICOLON
   19     | ident . TLF expr TRF TEQUAL expr TSEMICOLON

    TEQUAL  shift, and go to state 84
    TLF     shift, and go to state 85

    $default  reduce using rule 13 (type)


State 68

    2 mainclassdecl: TCLASS ident TLBRACE TPUBLIC TSTATIC TVOID TMAIN TLPAREN TSTRING TLF TRF ident TRPAREN TLBRACE stmtlist TRBRACE . TRBRACE

    TRBRACE  shift, and go to state 86


State 69

   14 stmt: TLBRACE stmtlist . TRBRACE
   40 stmtlist: stmtlist . stmt

    TIDENT   shift, and go to state 4
    TINT     shift, and go to state 20
    TLBRACE  shift, and go to state 60
    TRBRACE  shift, and go to state 87
    TSYSOUT  shift, and go to state 61
    TBOOL    shift, and go to state 23
    TIF      shift, and go to state 63
    TWHILE   shift, and go to state 64

    type   go to state 65
    stmt   go to state 66
    ident  go to state 67


State 70

   17 stmt: TSYSOUT TLPAREN . expr TRPAREN TSEMICOLON

    TIDENT   shift, and go to state 4
    TNUMBER  shift, and go to state 71
    TLPAREN  shift, and go to state 72
    TFALSE   shift, and go to state 73
    TTRUE    shift, and go to state 74
    TBANG    shift, and go to state 75
    TNEW     shift, and go to state 76
    TTHIS    shift, and go to state 77

    expr      go to state 88
    biopexpr  go to state 79
    ident     go to state 80


State 71

   25 expr: TNUMBER .

    $default  reduce using rule 25 (expr)


State 72

   33 expr: TLPAREN . expr TRPAREN

    TIDENT   shift, and go to state 4
    TNUMBER  shift, and go to state 71
    TLPAREN  shift, and go to state 72
    TFALSE   shift, and go to state 73
    TTRUE    shift, and go to state 74
    TBANG    shift, and go to state 75
    TNEW     shift, and go to state 76
    TTHIS    shift, and go to state 77

    expr      go to state 89
    biopexpr  go to state 79
    ident     go to state 80


State 73

   27 expr: TFALSE .

    $default  reduce using rule 27 (expr)


State 74

   26 expr: TTRUE .

    $default  reduce using rule 26 (expr)


State 75

   32 expr: TBANG . expr

    TIDENT   shift, and go to state 4
    TNUMBER  shift, and go to state 71
    TLPAREN  shift, and go to state 72
    TFALSE   shift, and go to state 73
    TTRUE    shift, and go to state 74
    TBANG    shift, and go to state 75
    TNEW     shift, and go to state 76
    TTHIS    shift, and go to state 77

    expr      go to state 90
    biopexpr  go to state 79
    ident     go to state 80


State 76

   30 expr: TNEW . TINT TLF expr TRF
   31     | TNEW . ident TLPAREN TRPAREN

    TIDENT  shift, and go to state 4
    TINT    shift, and go to state 91

    ident  go to state 92


State 77

   29 expr: TTHIS .

    $default  reduce using rule 29 (expr)


State 78

    9 mtddecl: TPUBLIC type ident TLPAREN vararglist TRPAREN TLBRACE stmtlist TRETURN expr . TSEMICOLON TRBRACE
   22 expr: expr . TLF expr TRF
   23     | expr . TDOT TLENGT
   24     | expr . TDOT ident TLPAREN exprlist TRPAREN
   34 biopexpr: expr . TPLUS expr
   35         | expr . TMINUS expr
   36         | expr . TCLT expr
   37         | expr . TAND expr
   38         | expr . TMUL expr

    TCLT        shift, and go to state 93
    TDOT        shift, and go to state 94
    TSEMICOLON  shift, and go to state 95
    TPLUS       shift, and go to state 96
    TMINUS      shift, and go to state 97
    TMUL        shift, and go to state 98
    TAND        shift, and go to state 99
    TLF         shift, and go to state 100


State 79

   21 expr: biopexpr .

    $default  reduce using rule 21 (expr)


State 80

   28 expr: ident .

    $default  reduce using rule 28 (expr)


State 81

   15 stmt: TIF TLPAREN . expr TRPAREN stmt TELSE stmt

    TIDENT   shift, and go to state 4
    TNUMBER  shift, and go to state 71
    TLPAREN  shift, and go to state 72
    TFALSE   shift, and go to state 73
    TTRUE    shift, and go to state 74
    TBANG    shift, and go to state 75
    TNEW     shift, and go to state 76
    TTHIS    shift, and go to state 77

    expr      go to state 101
    biopexpr  go to state 79
    ident     go to state 80


State 82

   16 stmt: TWHILE TLPAREN . expr TRPAREN stmt
